--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -12,7 +12,7 @@
     <h2>this is testing H2</h2>
     <p>this is testing P</p>
     <h3>this is testing H3</h3>
-    <h4>this is testing H4</h4>
+    <h4><center>this is testing H4</h4>
     <h5>this is testing H5</h5>
     <h6>this is testing H6</h6>
     {{ content }}
