--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -15,6 +15,7 @@
     <h4><center>this is testing H4</h4>
     <h5>this is testing H5</h5>
     <h6>this is testing H6</h6>
+        <img src="breakfast-super-shake.jpg" width="350" height="330px">
     {{ content }}
 </body>
 </html>
